Swagger mapping update
