# src/cosmos.go
@@ -3,13 +3,15 @@ package main
 import (
 	"context"
 	"encoding/json"
+	"net/http"
 	"os"
-    "net/http"
+	"strconv"
 
 	"github.com/Azure/azure-sdk-for-go/sdk/azidentity"
 	"github.com/Azure/azure-sdk-for-go/sdk/data/azcosmos"
 	"github.com/gorilla/mux"
 )
+
 
 func authenticateCosmosDB() (*azcosmos.Client, error) {
 	endpoint := os.Getenv("COSMOS_DB_ENDPOINT")
@@ -31,6 +33,17 @@ func authenticateCosmosDB() (*azcosmos.Client, error) {
 	return client, nil
 }
 
+
+// getCert godoc
+// @Summary      Show a Specified Cert
+// @Description  Get a certification by a certain key & value
+// @Tags         Certifications
+// @Accept       json
+// @Produce      json
+// @Param        key	path	string	true	"Select Category for Search"	Enums(id, category, company)
+// @Param        value	path	string	true	"Select Category for Search"	example(Microsoft)
+// @Success      200  {object}  Certs
+// @Router       /cert/{key}/{value} [get]
 func getCert(w http.ResponseWriter, r *http.Request) {
 
 	///////////////////////////////////////////
@@ -57,17 +70,18 @@ func getCert(w http.ResponseWriter, r *http.Request) {
 
 	///////////////////////////////////////////
 
-	//Input Parameters
+	//Input UEL Parameters 
     vars := mux.Vars(r)
     
     inputKey := vars["Key"]
     inputValue := vars["Value"]
 
-	// inputKey validation
+	// inputKey validation to prevent code injection and ensure data santization 
+	// Restricting input 
 	validKeyInputs := [...]string{"id", "category", "company"}
-
 	found := false
 
+	// Loop to check if input paramter is valid 
 	for i := 0; i < 5; i++ {
 		if inputKey == validKeyInputs[i] {
 			found = true
@@ -79,7 +93,7 @@ func getCert(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	// Validate Name length and pattern
+	// Data sanatize as to prevent buffer overflow attacks and restrict the amount of data that can be injected 
 	if len(inputKey)+len(inputValue) > 50 {
 		http.Error(w, "Name exceeds maximum length", http.StatusBadRequest)
 		return
@@ -88,6 +102,7 @@ func getCert(w http.ResponseWriter, r *http.Request) {
 	partitionKey := azcosmos.NewPartitionKeyString("certification")
 
     // Construct the query dynamically
+	// Validates and sanitizes user input to prevent security vulnerabilities such as SQL injection
     query := "SELECT * FROM certifications c WHERE c." + inputKey + " = @value"
     queryOptions := azcosmos.QueryOptions{
         QueryParameters: []azcosmos.QueryParameter{
@@ -95,37 +110,47 @@ func getCert(w http.ResponseWriter, r *http.Request) {
         },
     }
 
-	// Execute query
 	context := context.TODO()
+	// Execute query to the cosmos container
 	queryPager := container.NewQueryItemsPager(query, partitionKey, &queryOptions)
 
 	var certs []Certs
 
+	// https://learn.microsoft.com/en-us/azure/cosmos-db/nosql/query/pagination
+	// How azure Csomos DB operates thru the use of pages which can span mulitple pages depending on certain conditions
+	// each query made can be different can can contain output different number of pages and a different number of items on each page
+	// This function loops thru each page and each item on those pages to passes them thru to a certs variable to output
 	for queryPager.More() {
 		queryResponse, err := queryPager.NextPage(context)
 		if err != nil {
-			http.Error(w, "No Item Found", http.StatusInternalServerError)
+			http.Error(w, err.Error(), http.StatusInternalServerError)
 			return
 		}
 
 		for _, item := range queryResponse.Items {
 			var cert Certs
 			if err := json.Unmarshal(item, &cert); err != nil {
-				http.Error(w, "No Item Found", http.StatusInternalServerError)
+				http.Error(w, err.Error(), http.StatusInternalServerError)
 				return
 			}
 			certs = append(certs, cert)
 		}
 	}
 
-	// Write response
-	w.Header().Set("Content-Type", "application/json")
-	if err := json.NewEncoder(w).Encode(certs); err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
+	// Response output
+	Responder(w, certs)
 }
 
+
+// getCert godoc
+// @Summary      Show Certification Listings
+// @Description  List all current Certifications by Patrick
+// @Tags         Certifications
+// @Accept       json
+// @Produce      json
+// @Param   top     query     int        false  "Top results"          example(3)
+// @Success      200  {object}  Certs
+// @Router       /certs [get]
 func getCerts(w http.ResponseWriter, r *http.Request) {
 	// Authenticate Cosmos DB
 	client, err := authenticateCosmosDB()
@@ -149,13 +174,35 @@ func getCerts(w http.ResponseWriter, r *http.Request) {
 
 	partitionKey := azcosmos.NewPartitionKeyString("certification")
 
-	// Define query and options
+	// Gets query from url 
+	// This is not in route table as mux makes the query option mandatory if used there 
+	values := r.URL.Query()
+    topResults := values.Get("top")
+	topNum := 0
+
+	// If topResults is provided, validate it
+	if topResults != "" {
+		// Convert topResults to integer
+		var err error
+		topNum, err = strconv.Atoi(topResults)
+		if err != nil || topNum <= 0 {
+			http.Error(w, "Invalid 'top' value", http.StatusBadRequest)
+			return
+		}
+	}
+
+	// Define query and options depending of input of query or not
 	query := "SELECT * FROM certifications c WHERE c.category = @category"
+	if topNum > 0 {
+		query = "SELECT TOP @topResults * FROM certifications c WHERE c.category = @category"
+	}  
+
 
 	// Seperating the value of @category is important for dynamic variable as it prevents sql injectin attacks
 	queryOptions := azcosmos.QueryOptions{
 		QueryParameters: []azcosmos.QueryParameter{
 			{Name: "@category", Value: "certification"},
+			{Name: "@topResults", Value: topNum},
 		},
 	}
 
@@ -165,6 +212,10 @@ func getCerts(w http.ResponseWriter, r *http.Request) {
 
 	var certs []Certs
 
+	// https://learn.microsoft.com/en-us/azure/cosmos-db/nosql/query/pagination
+	// How azure Csomos DB operates thru the use of pages which can span mulitple pages depending on certain conditions
+	// each query made can be different can can contain output different number of pages and a different number of items on each page
+	// This function loops thru each page and each item on those pages to passes them thru to a certs variable to output
 	for queryPager.More() {
 		queryResponse, err := queryPager.NextPage(context)
 		if err != nil {
@@ -182,6 +233,12 @@ func getCerts(w http.ResponseWriter, r *http.Request) {
 		}
 	}
 
+	// Response output
+	Responder(w, certs)
+}
+
+// This function is what cleans up the data and return it in a json format for the user to ready clearly 
+func Responder(w http.ResponseWriter, certs interface{}) {
 	// Write response
 	w.Header().Set("Content-Type", "application/json")
 	if err := json.NewEncoder(w).Encode(certs); err != nil {
